--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -3,6 +3,8 @@
 
 <head>
   <title>Manage Products</title>
+  <link rel="icon" href="/images/img-logo.jpg" type="image/x-icon" />    
+
 
 
   <style>
@@ -21,7 +23,7 @@
       background-color: #f4f4f4;
     }
 
-    /* Navigation bar styles */
+    
     .navbar {
       /* background-color: #333; */
       overflow: hidden;
@@ -205,7 +207,7 @@
 <body>
   <nav class="navbar" id="myNavbar">
     <div class="logo">
-      <a href="#">
+      <a href="http://fixlaptopnew-env.eba-mki9mphh.ap-south-1.elasticbeanstalk.com/" target="_blank"> 
         <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
           <style>
             svg {
